# BUAA-2022-Compiler

./: BasicBlock.cpp  BigInteger.cpp  CMakeLists.txt  ErrorProcesser.cpp  IRCodeGenerator.cpp  Lexer.cpp  MipsGenerator.cpp  Optimization.cpp  Parser.cpp  README.md  Register.cpp  SymbolTable.cpp  Untitled-1.drawio  main.cpp  代码优化设计.md  总结感想.md  编译设计文档.md
20221105191751099/testfiles-only/C/: testfile12.txt
auto-generate/: copy&rename.py  test.py
include/: AST.h  BasicBlock.h  BigInteger.h  ErrorProcesser.h  IRCodeGenerator.h  Lexer.h  MipsGenerator.h  Optimization.h  PRELOAD.h  Parser.h  Register.h  SymbolTable.h
